<resources>
    <string name="app_name">Chat App</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_user">Select User</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
    <string name="username">username</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="search_users">Search Users...</string>
</resources>